<resources>
    <string name="app_name">Queue Free Shop</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="do_register">Rejestracja </string>
    <string name="do_login">Logowanie </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Aby się zarejestrować przesuń w lewo</string>
    <string name="login">Zaloguj się</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="e_mail">Email</string>
    <string name="tag">Kolejek Brak</string>
    <string name="swipe_right_for_login">Aby się zalogować przesuń w prawo</string>
    <string name="register">Zarejestruj się</string>
    <string name="register_confirm">Potwierdzenie rejestracji</string>
    <string name="confirm">Potwierdź</string>
    <string name="retype">Popraw</string>
    <string name="re_type_password">Wpisz ponownie hasło</string>
    <string name="full_name">Imię i Nazwisko</string>
    <string name="phone_number">Numer telefonu</string>
    <string name="start_shopping">Rozpoczynamy zakupy</string>

    <string name="shopping_cart">Panel zakupów</string>
    <string name="code_scanner">Skaner kodu kreskowego</string>
    <string name="code_hand_typing">Ręczne wpisywanie kodu</string>
    <string name="current_bill_of_sale">Akutalny paragon</string>
    <string name="products_list">Lista zakupów</string>

    <string name="main_panel">Panel główny</string>
    <string name="client_profile">Panel Klienta</string>
    <string name="code_QR">Kod QR</string>

    <string name="your_code_QR">Twój Kod QR to: </string>
    <string name="exit_shopping">Wyjdź ze sklepu </string>


    <string name="client_info">Informacje o kliencie</string>
    <string name="logout">Wyloguj się</string>


</resources>